k8s/arr/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: arr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr:5.22.4
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /config
          name: radarr-data
        - mountPath: /tv
          name: movies
        - mountPath: /downloads
          name: downloads
        ports:
        - containerPort: 7878
        livenessProbe:
          httpGet:
            path: /
            port: 7878
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 7878
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
      volumes:
      - name: radarr-data
        persistentVolumeClaim:
          claimName: radarr-data-nfs-pvc
      - name: movies
        nfs:
          server: 192.168.2.254
          path: /mnt/tank/media/Movies
      - name: downloads
        nfs:
          server: 192.168.2.254
          path: /mnt/tank/downloads
