k8s/arr/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: arr
spec:
  selector:
    app: radarr
  ports:
  - protocol: TCP
    port: 7878
    targetPort: 7878
  type: ClusterIP
